--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jannah's Quran Academy: Interactive Curriculum Infographic</title>
+    <title>Jannah's Quran Academy: Interactive Curriculum</title>
     
     <!-- External Libraries -->
     <script src="https://cdn.tailwindcss.com"></script>
