--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 
     <!-- Hero Section -->
     <header class="bg-gradient-to-r from-emerald-900 to-teal-800 text-white p-8 md:p-12 shadow-xl">
+<div class="max-w-7xl mx-auto flex justify-end">
+  <a href="#register" class="mt-2 inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-5 py-2 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
+    <span>Register Now</span>
+  </a>
+</div>
         <div class="max-w-7xl mx-auto text-center">
             <div class="inline-block bg-amber-500 text-emerald-900 font-bold px-3 py-1 rounded-full text-xs uppercase tracking-wider mb-4">Ages 5-12</div>
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Jannah's Quran Academy</h1>
@@ -242,13 +247,34 @@
             </div>
         </section>
 
-    </main>
+    
+  <!-- Bottom CTA: Register -->
+  <section id="register" class="bg-white/80 backdrop-blur rounded-2xl border border-amber-200 shadow-sm p-8 md:p-12">
+    <div class="text-center space-y-4">
+      <h2 class="text-3xl md:text-4xl font-bold text-emerald-800">Ready to join Jannah's Quran Academy?</h2>
+      <p class="text-stone-600 max-w-2xl mx-auto">Secure a spot for your child in our 12-stage mastery curriculum. Limited places each term.</p>
+      <div class="flex flex-col sm:flex-row items-center justify-center gap-3">
+        <a href="https://example.com/register" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-6 py-3 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
+          <span>Register Now</span>
+          <span aria-hidden="true">→</span>
+        </a>
+        <a href="#mastery-path" class="text-emerald-900/80 hover:text-emerald-900 underline underline-offset-4">Explore the stages first</a>
+      </div>
+    </div>
+  </section>
+
+ </main>
 
     <!-- Footer -->
     <footer class="bg-slate-900 text-slate-400 py-10 text-center">
         <div class="container mx-auto">
             <p class="mb-2 text-emerald-500 font-bold">Jannah's Quran Academy</p>
             <p class="text-sm">Empowering the next generation through the Quran.</p>
+      <div class="mt-6">
+        <a href="#register" class="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-5 py-2 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
+          <span>Register Now</span>
+        </a>
+      </div>
         </div>
     </footer>
 
