Update stylesheet link in index.html
Replaced Google Fonts stylesheet link with a Google Forms link.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- External Libraries -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://docs.google.com/forms/d/e/1FAIpQLSeAFKyarxeGq5To0DrMRy7IXe35-Ue7eVNgMx9B7xuWi_Sm4Q/viewform?usp=dialog" rel="stylesheet">
 
     <!-- Chosen Palette: "Golden Guidance" -->
     <!-- 
