Change registration link and include Google Fonts
Updated registration link and added Google Fonts stylesheet.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- External Libraries -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link href="https://docs.google.com/forms/d/e/1FAIpQLSeAFKyarxeGq5To0DrMRy7IXe35-Ue7eVNgMx9B7xuWi_Sm4Q/viewform?usp=dialog" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Noto+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- Chosen Palette: "Golden Guidance" -->
     <!-- 
@@ -254,7 +254,7 @@
       <h2 class="text-3xl md:text-4xl font-bold text-emerald-800">Ready to join Jannah's Quran Academy?</h2>
       <p class="text-stone-600 max-w-2xl mx-auto">Secure a spot for your child in our 12-stage mastery curriculum. Limited places each term.</p>
       <div class="flex flex-col sm:flex-row items-center justify-center gap-3">
-        <a href="https://example.com/register" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-6 py-3 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
+        <a href="https://forms.gle/cdRnsFtvmwjatqhT8" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-6 py-3 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
           <span>Register Now</span>
           <span aria-hidden="true">→</span>
         </a>
