--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
     <!-- Hero Section -->
     <header class="bg-gradient-to-r from-emerald-900 to-teal-800 text-white p-8 md:p-12 shadow-xl">
 <div class="max-w-7xl mx-auto flex justify-end">
-  <a href="#register" class="mt-2 inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-5 py-2 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
+  <a href="https://forms.gle/cdRnsFtvmwjatqhT8" target="_blank" rel="noopener" class="mt-2 inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-5 py-2 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
     <span>Register Now</span>
   </a>
 </div>
+
         <div class="max-w-7xl mx-auto text-center">
             <div class="inline-block bg-amber-500 text-emerald-900 font-bold px-3 py-1 rounded-full text-xs uppercase tracking-wider mb-4">Ages 5-12</div>
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Jannah's Quran Academy</h1>
@@ -262,7 +263,6 @@
       </div>
     </div>
   </section>
-
  </main>
 
     <!-- Footer -->
@@ -271,10 +271,11 @@
             <p class="mb-2 text-emerald-500 font-bold">Jannah's Quran Academy</p>
             <p class="text-sm">Empowering the next generation through the Quran.</p>
       <div class="mt-6">
-        <a href="#register" class="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-5 py-2 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
+        <a href="https://forms.gle/cdRnsFtvmwjatqhT8" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-amber-500 hover:bg-amber-600 text-emerald-900 font-bold px-5 py-2 rounded-full shadow focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-400 transition">
           <span>Register Now</span>
         </a>
       </div>
+
         </div>
     </footer>
 
