Update section title to include 'Writing'

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="flex items-center p-3 bg-slate-50 rounded-lg border border-slate-200">
                             <span class="text-2xl mr-4">🧠</span>
                             <div>
-                                <h4 class="font-bold text-slate-800">Aqeedah & Fiqh</h4>
+                                <h4 class="font-bold text-slate-800">Writing, Aqeedah & Fiqh</h4>
                                 <p class="text-xs text-slate-600">Islamic beliefs, manners, and understanding.</p>
                             </div>
                         </div>
